api-server/templates/namespace-monitoring.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: enabled  # Optional: Enables Istio sidecars for Grafana pods
