api-server/templates/disable-mtls-for-grafana.yaml
# disable-mtls-for-grafana.yaml(not required)
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: disable-mtls-for-grafana
  namespace: monitoring
spec:
  host: grafana.monitoring.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 3000
      tls:
        mode: DISABLE
